[gd_scene load_steps=4 format=2]

[ext_resource path="res://Compicactus/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://DefaultScene.gd" type="Script" id=2]
[ext_resource path="res://Compicactus/Compi01.png" type="Texture" id=3]

[node name="Node" type="Node"]

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 106, 406 )
scale = Vector2( 0.312963, 0.312963 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -40.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/MarginContainer"]
margin_right = 680.0
margin_bottom = 1220.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VSplitContainer"]
margin_right = 680.0
margin_bottom = 729.0
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Control/MarginContainer/VSplitContainer/VBoxContainer"]
margin_right = 680.0
margin_bottom = 729.0
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VSplitContainer"]
margin_top = 741.0
margin_right = 680.0
margin_bottom = 1220.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2"]
margin_right = 680.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/VBoxContainer2"]
margin_right = 680.0
margin_bottom = 46.0
size_flags_vertical = 3
text = "Command 1"
align = 0

[node name="Button2" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/VBoxContainer2"]
margin_top = 50.0
margin_right = 680.0
margin_bottom = 96.0
size_flags_vertical = 3
text = "Command 2"
align = 0

[node name="Button3" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/VBoxContainer2"]
margin_top = 100.0
margin_right = 680.0
margin_bottom = 146.0
size_flags_vertical = 3
text = "Command 3"
align = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2"]
margin_top = 150.0
margin_right = 680.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2"]
margin_top = 164.0
margin_right = 680.0
margin_bottom = 206.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Button" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/HBoxContainer"]
visible = false
margin_right = 31.0
margin_bottom = 46.0
size_flags_vertical = 3
disabled = true
text = "<-"

[node name="Button2" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/HBoxContainer"]
visible = false
margin_right = 222.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Word 2 ******"
clip_text = true

[node name="Button3" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/HBoxContainer"]
visible = false
margin_right = 336.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Word 3 ******"
clip_text = true

[node name="Button4" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/HBoxContainer"]
visible = false
margin_right = 676.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Word 3 ******"
clip_text = true

[node name="Button6" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/HBoxContainer"]
visible = false
margin_left = 648.0
margin_right = 679.0
margin_bottom = 46.0
size_flags_vertical = 3
disabled = true
text = "->"

[node name="Label" type="Label" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/HBoxContainer"]
margin_right = 680.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2"]
margin_top = 210.0
margin_right = 680.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 10 )

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2"]
margin_top = 224.0
margin_right = 680.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Button" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/GridContainer"]
margin_right = 338.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Word 1"

[node name="Button2" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/GridContainer"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Word 2"

[node name="Button3" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/GridContainer"]
margin_top = 50.0
margin_right = 338.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Word 3"

[node name="Button4" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/GridContainer"]
margin_left = 342.0
margin_top = 50.0
margin_right = 680.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Word 4"

[node name="Button5" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/GridContainer"]
margin_top = 100.0
margin_right = 338.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Word 5"

[node name="Button6" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/GridContainer"]
margin_left = 342.0
margin_top = 100.0
margin_right = 680.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Word 6"

[node name="MarginContainer3" type="MarginContainer" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2"]
margin_top = 374.0
margin_right = 680.0
margin_bottom = 379.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2"]
margin_top = 383.0
margin_right = 680.0
margin_bottom = 429.0

[node name="Button7" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 338.0
margin_bottom = 46.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Reset"

[node name="Button8" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "Refresh"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2"]
margin_top = 433.0
margin_right = 680.0
margin_bottom = 479.0

[node name="Button7" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/HBoxContainer3"]
margin_right = 338.0
margin_bottom = 46.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "English"

[node name="Button8" type="Button" parent="Control/MarginContainer/VSplitContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "Espa√±ol"
